# goit-pythonweb-hw-01

./: .gitignore  pyproject.toml
src/goit_pythonweb_hw_01/: main.py  task1.py  task2.py
