[project]
name = "goit-pythonweb-hw-01"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita-Samoilenko",email = "mykyta.samoilenko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "mypy (>=1.15.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "goit_pythonweb_hw_01", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
